# nminx

./: .path.vim  .ycm_extra_conf.py  CMakeLists.txt  Doxyfile.in  README.md  task
cmake/: FindGit.cmake  FindMake.cmake  FindNuma.cmake  FindTar.cmake  FindmTCP.cmake  Findnetmap.cmake  mtcp.cmake  mtcp_build.cmake  nginx.cmake
config/: nminx.conf
include/nginx/: ngx_alloc.h  ngx_array.h  ngx_buf.h  ngx_config.h  ngx_core.h  ngx_errno.h  ngx_files.h  ngx_hash.h  ngx_http.h  ngx_http_core_module.h  ngx_http_request.h  ngx_list.h  ngx_os.h  ngx_palloc.h  ngx_rbtree.h  ngx_string.h  ngx_time.h  ngx_times.h
include/nminx/: config.h  connection.h  http_connection.h  http_request.h  io.h  nminx.h  process.h  server.h  socket.h  watchdog.h
src/: io.c  io_ctx.h  main.c  nminx.c  server.c  socket.c  watchdog.c
src/nginx/: ngx_alloc.c  ngx_array.c  ngx_buf.c  ngx_cpuinfo.c  ngx_errno.c~  ngx_files.c~  ngx_hash.c  ngx_http_header_filter_module.c  ngx_http_helloworld_filter.c  ngx_http_parse.c  ngx_http_write_filter_module.c  ngx_list.c  ngx_palloc.c  ngx_rbtree.c  ngx_string.c  ngx_time.c  ngx_times.c
src/nminx/: connection.c  http_connection.c  http_request.c  http_request.h  io.c  io_ctx.h  nminx.c  process.c  server.c  socket.c  watchdog.c
